--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "antora": "^3.1.9",
     "asciidoctor": "^3.0.4",
     "asciidoctor-kroki": "^0.18.1",
-    "cheerio": "^1.0.0-rc.12",
-    "html-entities": "2.4.0",
+    "cheerio": "^1.0.0",
+    "html-entities": "2.5.2",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
