--- a/antora.yml
+++ b/antora.yml
@@ -29,27 +29,27 @@ asciidoc:
     # service_url_component will be used to assemble the url for services to include content (tables)
     # sourced from the ocis repo.
     # 'docs' for the next branch or 'docs-stable-7.0' for a production branch
-    service_url_component: 'docs'
+    service_url_component: 'docs-stable-7.1'
 
     # defines the url path component when accessing the ocis repo for versioned data includes or examples
     # 'master' for the next branch or 'stable-7.0' for a production branch
-    ocis_repo_url_component: 'master'
+    ocis_repo_url_component: 'stable-7.1'
 
     # service_tab_text will be used as tab text shown for the tables in services only
     # note when literally changing the word 'master' to something else, you also must adapt 'env-and-yaml.adoc'.
     # this does not apply to branched releases using semver, only to the master branch! 
     # 'master' for the next branch or '7.0.0' for a production branch including patch releases like `7.0.1'
-    service_tab_text: 'master'
+    service_tab_text: '7.1.0'
 
     # note that compose_url_component is used for compose examples and for the EULA ONLY
     # compose_url_component will be used to assemble the url (tag) accessing the link for the services (tag)
     # 'master' for the next branch or 'v7.0.0' for a production branch including patch releases like `v7.0.1'
     # note the v ! as it is tagged
-    compose_url_component: 'master'
+    compose_url_component: 'v7.1.0'
 
     # compose_tab_text will be used as tab text for examples and all other stuff but not services
     # 'master' for the next branch or '7.0.0' for a production branch including patch releases like `7.0.1'
-    compose_tab_text: 'master'
+    compose_tab_text: '7.1.0'
 
     # this is the first part of the name for envvars between major versions that will be added or removed
     # example for full name: 7.0.0-7.1.0-added.adoc or 7.0.0-7.1.0-removed.adoc
