--- a/antora.yml
+++ b/antora.yml
@@ -14,8 +14,8 @@ asciidoc:
     previous-ocis-version: {page-component-version} # do not change, this is the value of the version key
 
     # must be removed when antora 3.2 has been updated, because this is then an intrinsic attribute
-    # the branched value is the value for the production release like '7.0.0'
-    antora-component-version: '7.1.0'
+    # the branched value is the value for the production release like 'next' or '7.1'
+    antora-component-version: 'next'
 
     # used to define the include path for services without trailing /
     # note that any changes of this path also need adjustment in
@@ -28,12 +28,12 @@ asciidoc:
     # note that service_url_component is used for services ONLY
     # service_url_component will be used to assemble the url for services to include content (tables)
     # sourced from the ocis repo.
-    # 'docs' for the next branch or 'docs-stable-7.0' for a production branch
-    service_url_component: 'docs-stable-7.1'
+    # 'docs' for the next branch or 'docs-stable-7.1' for a production branch
+    service_url_component: 'docs'
 
     # defines the url path component when accessing the ocis repo for versioned data includes or examples
-    # 'master' for the next branch or 'stable-7.0' for a production branch
-    ocis_repo_url_component: 'stable-7.1'
+    # 'master' for the next branch or 'stable-7.1' for a production branch
+    ocis_repo_url_component: 'master'
 
     # service_tab_text will be used as tab text shown for the tables in services only
     # note when literally changing the word 'master' to something else, you also must adapt 'env-and-yaml.adoc'.
