--- a/antora.yml
+++ b/antora.yml
@@ -15,7 +15,7 @@ asciidoc:
 
     # must be removed when antora 3.2 has been updated, because this is then an intrinsic attribute
     # the branched value is the value for the production release like 'next' or '7.1'
-    antora-component-version: 'next'
+    antora-component-version: '7.1'
 
     # used to define the include path for services without trailing /
     # note that any changes of this path also need adjustment in
@@ -29,11 +29,11 @@ asciidoc:
     # service_url_component will be used to assemble the url for services to include content (tables)
     # sourced from the ocis repo.
     # 'docs' for the next branch or 'docs-stable-7.1' for a production branch
-    service_url_component: 'docs'
+    service_url_component: 'docs-stable-7.1'
 
     # defines the url path component when accessing the ocis repo for versioned data includes or examples
     # 'master' for the next branch or 'stable-7.1' for a production branch
-    ocis_repo_url_component: 'master'
+    ocis_repo_url_component: 'stable-7.1'
 
     # service_tab_text will be used as tab text shown for the tables in services only
     # note when literally changing the word 'master' to something else, you also must adapt 'env-and-yaml.adoc'.
