--- a/antora.yml
+++ b/antora.yml
@@ -50,7 +50,7 @@ asciidoc:
     # this is the first part of the name for envvars between major versions that will be added or removed
     # example for full name: 7.0.0-7.1.0-added.adoc or 7.0.0-7.1.0-removed.adoc
     # note that the name must be exactly how it is defined in the ocis repo to access the source files!
-    env_var_delta_name: '7.1.0-7.2.0'
+    env_var_delta_name: '7.2.0-7.3.0'
 
     # set attributes defining path components which will be assembled in the document
     compose_url: 'https://github.com/owncloud/ocis/tree/'
@@ -65,6 +65,10 @@ asciidoc:
     # static path components, used to assemble the final path dependent on service_url_component to include services
     ocis_services_raw_url: 'https://raw.githubusercontent.com/owncloud/ocis/'
     ocis_services_final_path: '/services/_includes/'
+
+    # only used in deployment/services/env-var-changes.adoc
+    # static path component, used to assemble the final path
+    ocis_services_env_var_deltas_path: '/services/general-info/envvars/env-var-deltas/'
 
     # used in depl-examples
     download-gh-directory-url: https://download-directory.github.io
